added records commit

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "navbar-dropdown-v1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://manhantesh9.github.io/travellingapp",
+  "homepage": "https://mahantesh9.github.io/travellingapp",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
